*pygments-rb-0.4.2 (25 Feb 2013)

  25 Feb 2013; Manuel Rüger <gentoo@rueg.eu> +pygments-rb-0.4.2.ebuild,
  -pygments-rb-0.3.7.ebuild:
  dev-ruby/pygments-rb: Version bump

*pygments-rb-0.3.7 (02 Jan 2013)

  02 Jan 2013; Manuel Rüger <gentoo@rueg.eu> +pygments-rb-0.3.7.ebuild,
  -pygments-rb-0.3.4.ebuild:
  dev-ruby/pygments-rb: Version bump

*pygments-rb-0.3.4 (29 Dec 2012)

  29 Dec 2012; Manuel Rüger <gentoo@rueg.eu +pygments-rb-0.3.4.ebuild,
  -pygments-rb-0.3.3.ebuild:
  dev-ruby/pygments-rb: Version bump

  28 Dec 2012; Manuel Rüger <gentoo@rueg.eu pygments-rb-0.3.3.ebuild:
  dev-ruby/pygments-rb: Add some hints about the failing test

*pygments-rb-0.3.3 (28 Dec 2012)

  28 Dec 2012; Manuel Rüger <gentoo@rueg.eu +metadata.xml,
  +pygments-rb-0.3.3.ebuild:
  dev-ruby/pygments-rb: Initial version for pygments.rb