@@ -1,3 +1,6 @@
+  25 Feb 2013; Manuel Rüger <gentoo@rueg.eu> pygments-rb-0.4.2.ebuild:
+  dev-ruby/pygments-rb: Migrated to python-r1, thanks to hasufell
+
 *pygments-rb-0.4.2 (25 Feb 2013)
 
   25 Feb 2013; Manuel Rüger <gentoo@rueg.eu> +pygments-rb-0.4.2.ebuild,
